feat(main-app): add react component into main

--- a/main-app/src/index.ejs
+++ b/main-app/src/index.ejs
@@ -48,7 +48,6 @@
           "react": "https://cdn.jsdelivr.net/npm/react@16.13.1/umd/react.development.js",
           "react-dom": "https://cdn.jsdelivr.net/npm/react-dom@16.13.1/umd/react-dom.development.js",
           "@CamilleBuus/root-config": "//localhost:9000/CamilleBuus-root-config.js",
-          "@CamilleBuus/sub-app": "http://localhost:8080/CamilleBuus-sub-app.js",
           "@CamilleBuus/sub-app-angular": "http://localhost:4200/main.js"
         }
       }
@@ -79,5 +78,6 @@
     System.import('@CamilleBuus/root-config');
   </script>
   <import-map-overrides-full show-when-local-storage="devtools" dev-libs></import-map-overrides-full>
+  <div id="root"></div>
 </body>
 </html>
